Improve responsiveness and fixed layout issues.

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 html, body{
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
   font-family: Arial, Helvetica, sans-serif;
   background: rgb(12, 12, 27);
   color: #f3f4f6;
